--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,4 +25,5 @@ services:
 
     App\EntityListener\:
         resource: '../src/EntityListener/'
-        tags: ['doctrine.orm/entity_listener']
+        tags: ['doctrine.orm.entity_listener']
+
