--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,4 +4,4 @@ controllers:
 
 index:
     path: /
-    controller: App\Controller\TricksController::index
+    controller: App\Controller\HomeController::index
